refactor: refactoring to use sequence from postgresql